add /auth/register
