# 13_iot/sens-server/swagger.json
@@ -30,26 +30,31 @@
         "description": "email, password로 회원가입",
         "operationId": "registerUser",
         "consumes": [
-          "application/json",
-          "application/x-www-form-urlencoded"
+          "application/json"
         ],
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "in": "formData",
-            "name": "email",
-            "type": "string",
-            "description": "이메일",
-            "required": true
-          },
-          {
-            "in": "formData",
-            "name": "password",
-            "type": "string",
-            "description": "비밀번호 (6글자 이상)",
-            "required": true
+            "in": "body",
+            "name": "body",
+            "description": "로그인 정보",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "test@user.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "secret_word",
+                  "description": "6글자 이상 입력 필요"
+                }
+              }
+            }
           }
         ],
         "responses": {
